# dbjump

./: CLAUDE.md  Cargo.toml  README.md
oh-my-zsh/dbjump/: dbjump.plugin.zsh
scripts/: install.sh
src/: error.rs  lib.rs  main.rs  utils.rs
src/cli/: args.rs  completions.rs  mod.rs  shell.rs
src/config/: mod.rs  parser.rs  path.rs  validator.rs
src/database/: clickhouse.rs  executor.rs  mod.rs  mongodb.rs  mysql.rs  postgresql.rs  types.rs
src/shells/: init.zsh.template
