[package]
name = "dbjump"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
clap_complete = "4.5"
which = "6.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[lib]
name = "dbjump"
path = "src/lib.rs"

[[bin]]
name = "dbjump"
path = "src/main.rs"
